<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
    
            <LinearLayout
                android:id="@+id/linearLayoutScrolleBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp" >
    
                <!-- Parent 1 -->
                <TextView
                    android:id="@+id/textPatternName1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/display_pattern_name1" />
    
                <LinearLayout
                    android:id="@+id/linearLayoutPattern1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp" >
    
                    <EditText
                        android:id="@+id/editPatternName1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1" />
    
                    <Button
                        android:id="@+id/buttonPatternSave1"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:onClick="onClickPatternSaveBtn"
                        android:text="@string/button_pattern_save" />
                </LinearLayout>
    
                <!-- Parent 2 -->
                <TextView
                    android:id="@+id/textPatternName2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/display_pattern_name2" />
    
                <LinearLayout
                    android:id="@+id/linearLayoutPattern2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp" >
    
                    <EditText
                        android:id="@+id/editPatternName2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1" />
    
                    <Button
                        android:id="@+id/buttonPatternSave2"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:onClick="onClickPatternSaveBtn"
                        android:text="@string/button_pattern_save" />
                </LinearLayout>
    
                <!-- Parent 3 -->
                <TextView
                    android:id="@+id/textPatternName3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/display_pattern_name3" />
    
                <LinearLayout
                    android:id="@+id/linearLayoutPattern3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp" >
    
                    <EditText
                        android:id="@+id/editPatternName3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1" />
    
                    <Button
                        android:id="@+id/buttonPatternSave3"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:onClick="onClickPatternSaveBtn"
                        android:text="@string/button_pattern_save" />
                </LinearLayout>
    
                <LinearLayout
                    android:id="@+id/linearLayoutPatternAuth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="right" >
    
                    <Button
                        android:id="@+id/buttonPatternAuth"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:onClick="onClickPatternAuthBtn"
                        android:text="@string/button_pattern_auth" />
                </LinearLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >
                    <LinearLayout
                        android:id="@+id/linearLayoutScore"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="5dp" >
                        <TextView
                            android:id="@+id/textScoreTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:text="@string/display_score_title" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_centerVertical="true" >
                        <ProgressBar android:id="@+id/progressbar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:indeterminate="true"
                            android:layout_gravity="center"
                            android:visibility="invisible"
                            android:background="@drawable/radius_shape"
                            style="?android:attr/progressBarStyle" />
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>